<resources>
    <string name="new_account">Crear cuenta</string>
    <string name="ok">OK</string>
    <string name="sellers">Distribuidores</string>
    <string name="transaction_history">Historial</string>
    <string name="browse_sellers">Buscar Distribuidores</string>
    <string name="search_sellers">¿Qué buscas?</string>
    <string name="brand_filter">Marca</string>
    <string name="type_filter">Tipo</string>
    <string name="category_filter">Categoría</string>
    <string name="biz_name_hint">Distribuidor ejemplo…</string>
    <string name="account_admin">Adminstrador de cuenta</string>
    <string name="account_admin_eg">Ej. Ricardo Arjona</string>
    <string name="reenter_password">Ingresar contraseña nuevamente</string>
    <string name="reenter_password_hint">Ingresar contraseña nuevamente</string>
    <string name="profile_picture">Foto de perfíl</string>
    <string name="login_error">Los datos no coinciden</string>
    <string name="basket">Carrito</string>
    <string name="no_items_in_basket">Tu carrito está vacío</string>
    <string name="go_back">Regresar</string>
    <string name="buy">Comprar</string>
    <string name="completed">Realizado</string>
    <string name="location_order">Ubicación:</string>
    <string name="date_order">Fecha:</string>
    <string name="purchase_failed">La compra fallo</string>
    <string name="confirm_order_dialog">Presione OK para procesar este pedido.</string>
    <string name="basket_empty">No hay órdenes activas</string>
    <string name="enter_account_manager_name">Ingresa nombre del administrador de la cuenta</string>
    <string name="enter_email">Ingresa tu correo electrónico</string>
    <string name="passwords_dont_match">No válido. Las contraseñas no coinciden.</string>
    <string name="please_upload_picture">Por favor agregar una imagen</string>
    <string name="need_location">No podemos continuar sin tu ubicacion</string>
    <string name="basket_with_other_seller_message">"Ya existe un pedido con otro distribuidor u otro de tus negocios. Si deseas continuar, ese pedido se eliminará y se creará uno nuevo." </string>
    <string name="continuar">Continuar</string>
    <string name="email_notfound_error">Falta el usuario. Por favor verifique la información nuevamente</string>
    <string name="no_passowrd_error">Falta tu contraseña</string>
    <string name="failed_to_create_business">Error creando negocio</string>
    <string name="add_business_name">Add business name</string>
    <string name="add_business_address">Add business address</string>
    <string name="error">Error</string>
    <string name="app_name">Waybil Comprar</string>
    <string name="email_login">Correo Electrónico</string>
    <string name="password_login">Contraseña</string>
    <string name="login_button">Ingresar</string>
    <string name="sign_up_button">Regístrate</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="no_account">Crear cuenta nueva</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="customers_string">Clientes</string>
    <string name="find_customers">Buscar clientes</string>
    <string name="account_details">Perfil</string>
    <string name="bank_details">Informacion Bancaria</string>
    <string name="sku">SKU#:</string>
    <string name="stock">Stock:</string>
    <string name="details">Detalles:</string>
    <string name="save">Guardar</string>
    <string name="location">Ubicación</string>
    <string name="history">Historial</string>
    <string name="upload_successful">Subida exitosa</string>
    <string name="error_image_capture">Error capturando imagen</string>
    <string name="time">Hora:</string>
    <string name="order_total">Total:</string>
    <string name="total">Total</string>
    <string name="total_colon">Total:</string>
    <string name="customer">Cliente:</string>
    <string name="order_details">Detalles del pedido</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="add">Agregar</string>
    <string name="manage_settings">Configuración</string>
    <string name="delivery">Entrega a negocio</string>
    <string name="for_pickup">Para recolectar</string>
    <string name="deliver">Entregar</string>
    <string name="success">Éxito</string>
    <string name="incorrect_pin">Clave incorrecta</string>
    <string name="no_changes_were_made">Ningún cambio fue hecho</string>
    <string name="confirm_delete_query">¿Está seguro que quiere eliminar este producto?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="complete_fields_suggestion">Por favor llene los espacios de arriba</string>
    <string name="delete_user_failed">No se pudo eliminar el usuario</string>
    <string name="update_success">Actualización exitosa</string>
    <string name="profile_unsaved_changes">Tiene cambios sin guardar.
        Presione descartar para continuar e ignorar cambios. Presione cerrar para cerrar este mensaje</string>
    <string name="discard_changes">Descartar cambios</string>
    <string name="close_message">Cerrar</string>
    <string name="remove_profile_image_query">¿Está seguro que quiere eliminar la foto de perfil?</string>
    <string name="choose_one">Escoja </string>
    <string name="waybil_customer_app">Waybil app para clientes</string>
    <string name="share_buyerside_message">Aquí está la app de Waybil para compradores</string>
    <string name="is_this_your_location">¿Está seguro que esta es su ubicación?</string>
    <string name="enter_email_address">Ingresa tu correo electrónico</string>
    <string name="enter_password">Ingresa contraseña</string>
    <string name="user_does_not_exist">El usuario no existe</string>
    <string name="reset_instructions_sent">Se ha enviado instrucciones para restablecer contraseña</string>
    <string name="signup_successful">Registro exitoso</string>
    <string name="signup_failed">Registro fallido</string>
    <string name="channel_name">ORDERS_CHANNEL</string>
    <string name="channel_description">order notification channel </string>
    <string name="summary">Resumen</string>
    <string name="transactions">Transacciones</string>
    <string name="orders_made">Pedidos Hechos</string>
    <string name="money_spent">Monto gastado</string>
    <string name="recent_order">Último Pedido</string>
    <string name="no_data_to_show">No hay datos para mostrar</string>
    <string name="orders">Pedidos</string>
    <string name="inventory">Inventario</string>
    <string name="visibility_home_warning">No está visible - comprobar configuración</string>
    <string name="search_for_product">Buscar productos</string>
    <string name="no_location_warning">No se puede continuar sin su ubicación</string>
    <string name="location_permission_query">¿Quieres permitir que Waybil acceda a la ubicación de este dispositivo?</string>
    <string name="not_waybil_qrcode_message">Esto no es un codigo QR de Waybil. Porfavor escanee de nuevo</string>
    <string name="camera_permission_request">Permitir que Waybil tome fotos para escanear codigo QR</string>
    <string name="enter_product_name">Ingrese nombre del producto</string>
    <string name="enter_brand_name">Ingrese marca del producto</string>
    <string name="enter_sku_number">Ingrese numero de SKU</string>
    <string name="enter_category">Ingrese la categoría</string>
    <string name="enter_unit_of_measurement">Ingrese unidad de medida</string>
    <string name="enter_size_per_unit">Ingrese tamaño</string>
    <string name="enter_quantity_per_unit">Ingrese cantidad</string>
    <string name="enter_price">Ingrese precio</string>
    <string name="enter_inventory_quantity">Ingrese cantidad en existencia</string>
    <string name="enter_type">Ingrese tipo</string>
    <string name="upload_image">Subir imagen</string>
    <string name="image_access_denied">Autorización para acceder galería de fotos es necesario</string>
    <string name="add_product">Agregar Producto</string>
    <string name="product_name">Nombre de producto</string>
    <string name="product_brand">Marca</string>
    <string name="product_sku">Código de referencia</string>
    <string name="sku_hint_text">ej. SKU142657</string>
    <string name="product_category">Categoría</string>
    <string name="product_category_hint">Ej. bebidas, comida, limpieza...</string>
    <string name="product_type">Tipo</string>
    <string name="product_type_hint">Ej. gasiosas, agua, papalinas...</string>
    <string name="product_description">Descripción</string>
    <string name="product_metric">Unidad de medida</string>
    <string name="product_size">Tamaño</string>
    <string name="product_bulk_quantity">Cantidad</string>
    <string name="product_metric_hint">eg. ml</string>
    <string name="product_size_hint">eg. 500</string>
    <string name="bulk_quantity_hint">eg. 12</string>
    <string name="product_price">Precio</string>
    <string name="product_price_hint">eg. 69.99</string>
    <string name="product_inventory_available">Producto en existencia</string>
    <string name="product_available_hint">eg. 64</string>
    <string name="search_for_image">Buscar Imagen</string>
    <string name="capture_image">Tomar Foto</string>
    <string name="enter_accntManager_name">Ingrese nombre del administrador</string>
    <string name="enter_business_name">Ingrese nombre de negocio</string>
    <string name="enter_business_type">Ingrese tipo de negocio</string>
    <string name="enter_phone_number">Ingrese numero de teléfono</string>
    <string name="enter_business_address">Ingrese dirección de negocio</string>
    <string name="enter_password_confirmation">Confirme contraseña</string>
    <string name="password_match_warning">Contraseñas no coinciden</string>
    <string name="error_logging_into_account">Error al ingresar a la cuenta</string>
    <string name="register">Registrar</string>
    <string name="business_name">Nombre de negocio</string>
    <string name="business_name_colon">Nombre de negocio:</string>
    <string name="business_name_hint">Ej. Tienda Los Angeles</string>
    <string name="account_adminstrator">Adminstrador de cuenta</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellido</string>
    <string name="first_name_hint">Ej. Ricardo</string>
    <string name="surname_hint">Ej. Arjona</string>
    <string name="phone_number">Número de telefono</string>
    <string name="phone_number_hint">00000000</string>
    <string name="address">Dirección</string>
    <string name="address_hint">Dirección</string>
    <string name="delivery_range">Distancia maxima para entrega (km)</string>
    <string name="share_location">Compartir Ubicación</string>
    <string name="invite_client">Invitar Cliente</string>
    <string name="logout">Cerrar sesión</string>
    <string name="confirm_emailPassword_deleteUser">Ingrese correo electrónico y contraseña para borrar cuenta</string>
    <string name="email_hint">ejemplo@ejemplo.com</string>
    <string name="delete_account">Borrar Cuenta</string>
    <string name="client_colon">Cliente:</string>
    <string name="location_colon">Ubicación:</string>
    <string name="date_colon">Fecha:</string>
    <string name="type_colon">Tipo:</string>
    <string name="delivery_estimate_header">Fecha de entrega:</string>
    <string name="product">Producto</string>
    <string name="quantity">Cantidad</string>
    <string name="price">Precio</string>
    <string name="delivery_fee">Costo de envío</string>
    <string name="directions">Direcciones</string>
    <string name="reject">Rechazar</string>
    <string name="add_business">Agregar negocio</string>
    <string name="business_type">Tipo de negocio</string>
    <string name="business_type_hint">Ej. Abarrotería</string>
    <string name="address_hint_specific">Ej. 18 Calle 25-42, Zona 10 Pradera, Cdad. de Guatemala</string>
</resources>